experimental: try to fix mobile chrome jump effect

--- a/css/cihan.css
+++ b/css/cihan.css
@@ -187,6 +187,7 @@ nav {
   height: 100vh;
   background: url(../images/home-bg.png) no-repeat center center;
   background-size: cover;
+  transition: height 1000000s ease;
   position: relative; }
   #home .title-wrapper {
     position: absolute;
